# ipfs-risc0-demo

./: .gitignore  Cargo.toml  README-remote.md  README.md  start_ipfs.sh  template.local.env
ipfs-core/: Cargo.toml
ipfs-core/src/: lib.rs
ipfs-host/: Cargo.toml
ipfs-host/proto-messages/: Cargo.toml
ipfs-host/src/: v0_proof.rs  v1_proof.rs
ipfs_core/: Cargo.toml
ipfs_host/src/: v0_proof.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: main.rs
